--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,10 @@
         "ecmaVersion": 12
     },
     "rules": {
-    }
+        "linebreak-style": "off",
+        "no-underscore-dangle": "off",
+        "class-methods-use-this": "off",
+        "no-unused-vars": "off",
+        "no-console": "off"
+      }
 }
