--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@hapi/jwt": "^2.1.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "instances-container": "^2.0.3",
     "nanoid": "^3.1.25",
     "pg": "^8.7.1"
   }
