--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ PGUSER_TEST=
 PGDATABASE_TEST=
 PGPASSWORD_TEST=
 PGPORT_TEST=5432
+
+# TOKENIZE
+ACCESS_TOKEN_KEY=
+REFRESH_TOKEN_KEY=
+ACCCESS_TOKEN_AGE=3000
