update env example

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ PGPORT=5432
 # POSTGRES TEST
 PGHOST_TEST=localhost
 PGUSER_TEST=
-PGDATABASE_TEST=forumapi_test
+PGDATABASE_TEST=
 PGPASSWORD_TEST=
 PGPORT_TEST=5432
 
