--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,7 +13,7 @@ jobs:
 
 
     steps:
-      name: SSH and deploy app
+    - name: SSH and deploy app
       uses: appleboy/ssh-action@master
       with: 
         host: ${{ secrets.SSH_HOST }}
